[tool.poetry]
name = "normalizing-flows"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
tqdm = "^4.46.1"
tensorflow = "^2.2.0"
fire = "^0.3.1"
tensorflow-datasets = "^3.1.0"
imageio = "^2.9.0"

[tool.poetry.dev-dependencies]
ipython = "^7.16.1"
pytest = "^5.4.3"
yapf = "^0.30.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
